// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot with flex 1`] = `
<ActivityIndicator
  color="#fff"
  style={
    Array [
      undefined,
      Object {
        "flex": 1,
      },
      null,
      null,
    ]
  }
/>
`;

exports[`should match snapshot with no flex 1`] = `
<ActivityIndicator
  color="#fff"
  style={
    Array [
      undefined,
      null,
      Object {
        "alignSelf": "flex-start",
      },
      null,
    ]
  }
/>
`;
